gobmkida/c3/dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2230:7: error: use of undeclared identifier 'dragon_escape_mx_initialized'; did you mean 'dragon2_initialized'?
if ( !dragon_escape_mx_initialized ) 
      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
      dragon2_initialized
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:70:12: note: 'dragon2_initialized' declared here
static int dragon2_initialized;
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2232:38: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
memset( dragon_escape_mx, 0, sizeof( dragon_escape_mx)); 
                                     ^~~~~~~~~~~~~~~~
                                     dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2232:9: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
memset( dragon_escape_mx, 0, sizeof( dragon_escape_mx)); 
        ^~~~~~~~~~~~~~~~
        dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2233:1: error: use of undeclared identifier 'dragon_escape_mx_initialized'
dragon_escape_mx_initialized = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2243:1: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
dragon_escape_mx[i] = 1; 
^~~~~~~~~~~~~~~~
dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2243:1: error: subscript of pointer to function type 'int (char *, int, char *)'
dragon_escape_mx[i] = 1; 
^~~~~~~~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2282:19: error: use of undeclared identifier 'dword_9A89D0'
if ( v15 != 3 && !dword_9A89D0[v14] ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2295:1: error: use of undeclared identifier 'dword_9A89D0'
dword_9A89D0[v14] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2298:25: error: use of undeclared identifier 'byte_9C689F'
v17 = ( unsigned __int8)byte_9C689F[v14]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2305:30: error: use of undeclared identifier 'byte_9C689E'
&& ( v29 = ( unsigned __int8)byte_9C689E[v14], v29 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2315:25: error: use of undeclared identifier 'byte_9C688C'
v19 = ( unsigned __int8)byte_9C688C[v14]; 
                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2324:30: error: use of undeclared identifier 'byte_9C688D'
&& ( v33 = ( unsigned __int8)byte_9C688D[v14], v33 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2333:19: error: use of undeclared identifier 'dword_9A8984'
if ( v21 != 3 && !dword_9A8984[v14] ) 
                  ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2337:30: error: use of undeclared identifier 'byte_9C688D'
&& ( v34 = ( unsigned __int8)byte_9C688D[v14], v34 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2346:1: error: use of undeclared identifier 'dword_9A8984'
dword_9A8984[v14] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2365:7: error: use of undeclared identifier 'dword_9A89CC'
if ( !dword_9A89CC[v14] ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2377:1: error: use of undeclared identifier 'dword_9A89CC'
dword_9A89CC[v14] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2413:30: error: use of undeclared identifier 'byte_9C688E'
&& ( v50 = ( unsigned __int8)byte_9C688E[v14], v50 != 3) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2422:23: error: use of undeclared identifier 'dword_9A89D4'
if ( !( _BYTE)v15 && !dword_9A89D4[v14] ) 
                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2434:1: error: use of undeclared identifier 'dword_9A89D4'
dword_9A89D4[v14] = 1; 
^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2475:6: error: use of undeclared identifier 'dragon_escape_mx'
if ( dragon_escape_mx[v53] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2482:1: error: use of undeclared identifier 'dragon_escape_mx'; did you mean 'dragon_escape'?
dragon_escape_mx[v53] = 0; 
^~~~~~~~~~~~~~~~
dragon_escape
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2169:6: note: 'dragon_escape' declared here
int  dragon_escape( char *goal, int color, char *escape_value) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/engine/dragon.c:2482:1: error: subscript of pointer to function type 'int (char *, int, char *)'
dragon_escape_mx[v53] = 0; 
^~~~~~~~~~~~~~~~
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/dragon_escape/src/obj/1/dragon.o] Error 1
